--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p>Student @ViewData["Student"]</p>
+
+<address>
+    <strong>More information: </strong> <a href="https://github.com/rafaellucasdacosta">Github</a>
+</address>
